# shape-maker

./: .prettierignore  AGENTS.md  README.md  backlog.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: frontend-ci.yml
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EditorCanvas.test.tsx  EditorCanvas.tsx  Inspector.test.tsx  Inspector.tsx
src/io/: exporters.test.ts  exporters.ts  files.ts  project.test.ts  project.ts
src/model/: diagram.ts  editorReducer.test.ts  editorReducer.ts  snap.test.ts  snap.ts
