[package]
name = "shape-maker"
version = "0.1.0"
description = "A lightweight desktop diagram editor for mechanical sketching workflows."
authors = ["Shape Maker Contributors"]
edition = "2021"

[lib]
name = "shape_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
